ccloud-to-ccloud/replicator/cfk/optional-http-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp-http-ingress
  namespace: confluent
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #     - schemaregistry.services.confluent.acme.com        
  #     - connect.services.confluent.acme.com
  #     - ksqldb.services.confluent.acme.com
  #     - controlcenter.services.confluent.acme.com
  #     secretName: services-external-tls
  rules:
    - host: connect.confluent.local.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: connect-replicator
              port:
                number: 8083
    - host: controlcenter.confluent.local.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: controlcenter
              port:
                number: 9021
